@@ -1,3 +1,8 @@
+2000-04-22  Timothy Wall  <twall@cygnus.com>
+
+	* gas/ia64/opc-f.d: Disassemble zeroes to verify break.f.
+	* gas/ia64/opc-f.s: Add an explicit stop to make IAS output match.
+
 Fri Apr 21 13:20:53 2000  Richard Henderson  <rth@cygnus.com>
 			  David Mosberger  <davidm@hpl.hp.com>
 			  Timothy Wall <twall@cygnus.com>
